# project-deployment

project/: Makefile  pyproject.toml  setup.cfg
project/.github/actions/build-application/: action.yml
project/.github/workflows/: lint.yml
project/src/: runner_builder.py  runner_inference.py
project/src/config/: .env  db.py  logger.py  model.py
project/src/model/: model_builder.py  model_inference.py
project/src/model/models/: rf_db_v1  rf_db_v3
project/src/model/pipeline/: collection.py  model.py  preparation.py
