[tool.poetry]
package-mode = false
name = "2"
version = "0.1.0"
description = ""
authors = ["yoppiibra <yoppiibra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "1.5.1"
pandas = "^2.2.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
wemake-python-styleguide = "^1.0.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

